<fix>Aligns menus pages querry desktop too short

--- a/css/style.css
+++ b/css/style.css
@@ -665,7 +665,7 @@ a {
   .BlocMenu {
     flex-direction: row;
     align-items: flex-start;
-    height: 530px;
+    height: 650px;
   }
 }
 .BlocMenu .BlocMenu__title {
