--- a/sass/pages/menus.scss
+++ b/sass/pages/menus.scss
@@ -19,7 +19,7 @@
 	@include desktop {
 		flex-direction: row;
 		align-items: flex-start;
-		height: 530px;
+		height: 650px;
 	}
 	.BlocMenu__title {
 		width: 100%;
